--- a/public/styles/InstagramDM.css
+++ b/public/styles/InstagramDM.css
@@ -67,7 +67,7 @@
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: #fff;
   position: absolute;
   bottom: 42px;
   left: 12px;
@@ -77,6 +77,7 @@
   font-size: 0.85em;
   font-weight: 600;
   padding: 0;
+  color: #000;
   text-align: center;
   position: relative;
   box-sizing: border-box;
@@ -113,8 +114,8 @@
   position: absolute;
   width: 13px;
   height: 13px;
-  border-bottom: 2px solid #333333;
-  border-left: 2px solid #333333;
+  border-bottom: 2px solid #333;
+  border-left: 2px solid #333;
   transform: rotate(45deg);
   left: 6px;
   top: 4px;
@@ -131,8 +132,8 @@
   width: 13px;
   height: 13px;
   border-radius: 5px;
-  background-color: #ffffff;
-  border: 2px solid #333333;
+  background-color: #fff;
+  border: 2px solid #333;
   position: relative;
   top: -4px;
   z-index: 10;
@@ -143,7 +144,7 @@
   width: 11px;
   height: 7px;
   border-left: 1px solid transparent;
-  border-bottom: 2px solid #333333;
+  border-bottom: 2px solid #333;
 }
 
 #workskin .insta .video .camlens,
@@ -161,15 +162,15 @@
   position: absolute;
   width: 8px;
   height: 8px;
-  border-left: 2px solid #333333;
-  border-top: 2px solid #333333;
+  border-left: 2px solid #333;
+  border-top: 2px solid #333;
   border-bottom: 2px solid transparent;
   transform: rotate(45deg) skew(10deg, 10deg);
   left: 0px;
 }
 
 #workskin .insta .body {
-  background: #ffffff;
+  background: #fff;
   padding: 0 0 1em 1em;
 }
 
